// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridDataEntryHelper<> should editHandler 1`] = `
Object {
  "id": "🐂🤏",
  "test": "👍",
}
`;

exports[`GridDataEntryHelper<> should handle add 1`] = `
Array [
  Object {
    "id": "💩",
  },
  Object {
    "id": "🐂",
  },
  Object {
    "id": "🥜",
  },
  Object {
    "id": "🐂",
  },
]
`;

exports[`GridDataEntryHelper<> should handle saving edited records  1`] = `
Array [
  Object {
    "id": "💩",
  },
  Object {
    "id": "🐂🤏",
    "test": "👍",
  },
  Object {
    "id": "🥜",
  },
]
`;

exports[`GridDataEntryHelper<> should handle saving new records  1`] = `
Array [
  Object {
    "id": "💩",
  },
  Object {
    "id": "🐂",
  },
  Object {
    "id": "🥜",
  },
  Object {
    "id": null,
    "test": "👍",
  },
]
`;

exports[`GridDataEntryHelper<> should removeHandler 1`] = `
Array [
  Object {
    "id": "💩",
  },
  Object {
    "id": "🐂",
  },
]
`;
